--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,17 +1,9 @@
 
-<div class='container mt-4'>
-	<div class='justify-content-center'>
-		<div class='col-6'>
-			<!--<% if @item != nil %>
-			<div class ='alert alert-danger'>
-				<p>Impossiblede créer l'objet</p>
-			</div>
-			<% end %>-->
-
-
+<div class='container'>
+	<div class='row'>
+		<div class='col-md-6 offset-md-3'>
 
 			<%= form_tag items_new_path, multipart: true do %>
-
 				<div class='form-group'>
 				<%= label_tag 'Enter a title:' %>
 				<%= text_field_tag 'title', nil, class:'form-control' %>
@@ -23,27 +15,17 @@
 				<small id="descriptionvalidation'" class="form-text text-muted">
   			Your description must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
 				</small>
-			</div>
-
-			
+			</div>			
 			<div class='form-group'>
 				<%= label_tag 'Choose a price:' %>
 				<br>
 				<%= number_field_tag 'price', nil, class:'special_input', rows: 2 %>
 			</div>
 
-
-
-
 			<div class='form-group'>
 				<%= label_tag 'Upload an image:' %>
 				<%= file_field_tag :image_upload, class:'form-control-file' %>
 			</div>
-
-
-
-
-
 
 			<%= submit_tag 'Create Item', class:'btn btn-primary' %>
 
