--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -287,7 +287,7 @@
                           <span class="clearfix"></span>
                           <span class="heading heading-sm c-gray-light strong-400">One cat. One picture.</span>
                           <p class="mt-3">
-                              All the components included in Boomerang are built to the same level of quality as Bootstrap and highlighted with several example pages.
+                              We hope you enjoy. Comeback when ever you want! We are always looking forward to receive your money
                           </p>
 
                           <div class="copyright mt-4">
